# CursoMouredev

./: .gitignore  .pre-commit-config.yaml  02_listas.py  03_tuples.py  04_sets.py  06_condicionales.py  07_bucles.py  08_funciones.py  coche.py  contar_palabras.py  dates.py  main.py  prueba.txt  pyproject.toml  requirements.txt  statistics.py  sumatorio.py
avanzado/: .pre-commit-config.yaml  01_date.py  02_compresion_listas.py  03_lambda.py  04_funciones_orden_superior.py  05_tipos_errores.py  06_manejo_ficheros.py  07_expresiones_regulares.py  08_paquetes.py
basico/: 01_strings.py  02_listas.py  03_tuples.py  04_sets.py  05_dics.py  06_condicionales.py  07_bucles.py  08_funciones.py  09_clases.py  10_excepciones.py  11_modulos.py  archivos.py  calculator.py  coche.py  contar_palabras.py  converter.py  dates.py  geometry.py  lista_estudiente.py  statistics.py  sumatorio.py
