[project]
name = "cursomouredev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=imports
ignore = ["E501"]         # ignorar longitud de línea si no quieres límite

[tool.ruff.format]
quote-style = "double"
indent-style = "space"